# homebound-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: configuration.md
examples/: codex.yaml  homebound.yaml  multi-project.yaml
scripts/: homeboundctl.sh  slack_post.sh  watchdog.sh
src/homebound/: __init__.py  admin.py  cli.py  config.py  inference.py  orchestrator.py  prompt_relay.py  routing.py  security.py  session.py  tmux.py
src/homebound/adapters/: __init__.py  runtime.py  tracker.py  transport.py
src/homebound/runtimes/: __init__.py  claude_code.py  codex.py  generic_cli.py
src/homebound/trackers/: __init__.py  github.py
src/homebound/transports/: __init__.py  slack.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_config.py  test_inference.py  test_multi_runtime.py  test_orchestrator.py  test_routing.py  test_security_policy.py  test_smart_routing.py  test_tmux.py
