[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homebound"
version = "0.1.0"
description = "Your agents are homebound — they run on your machine, not in the cloud. Command them from anywhere."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Homebound-Agents Contributors" },
]
keywords = ["ai", "agents", "orchestrator", "tmux", "slack", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
homebound = "homebound.cli:main"

[project.urls]
Homepage = "https://github.com/anoopy/homebound-agents"
Repository = "https://github.com/anoopy/homebound-agents"
"Bug Tracker" = "https://github.com/anoopy/homebound-agents/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/homebound"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
